--- a/index.html
+++ b/index.html
@@ -40,11 +40,13 @@
 						<li><a href="http://map.heavencraft.fr">Cartes</a></li>
 						<li class="visible-xs"><a href="https://www.facebook.com/Heavencraft">Facebook</a></li>
 						<li class="visible-xs"><a href="https://twitter.com/Heavencraftfr">Twitter</a></li>
+						<li class="visible-xs"><a href="https://github.com/heavencraft">Github</a></li>
 					</ul>
 					<ul class="nav navbar-nav navbar-right hidden-xs">
 						<li><a class="navbar-icon" id="radio-button" href="#"><img id="radio-button-img" src="images/radio_off.png" alt="Radio" /></a></li>
 						<li><a class="navbar-icon" href="https://www.facebook.com/Heavencraft"><img src="images/wool-fb.png" alt="facebook" /></a></li>
 						<li><a class="navbar-icon" href="https://twitter.com/Heavencraftfr"><img src="images/wool-tw.png" alt="twitter" /></a></li>
+						<li><a class="navbar-icon" href="https://github.com/heavencraft"><img src="images/wool-gh.png" alt="github" /></a></li>
 					</ul>
 				</div>
 			</div>
