Update website content

--- a/index.html
+++ b/index.html
@@ -3,148 +3,53 @@ layout: heavencraft
 print_header: true
 ---
 <div class="row text-center minecraftia hidden-xs">
-	<a class="col-xs-4 menu-item" href="#Les-differents-mondes">Les différents mondes</a>
-	<a class="col-xs-4 menu-item" href="#Qui-sommes-nous">Qui sommes-nous ?</a>
-	<a class="col-xs-4 menu-item" href="#Nous-aider">Nous aider</a>
+	<a class="col-xs-6 menu-item" href="#Qui-sommes-nous">Qui sommes-nous ?</a>
+	<a class="col-xs-6 menu-item" href="#Telechargements">Téléchargements</a>
 </div>
-
-<a id="Les-differents-mondes" class="anchor"></a>
-<h3 class="text-center h2">Les différents mondes</h3>
-
-<div class="row">
-	<div class="col-md-4">
-		<h2 class="text-center h3">Semi-RP</h2>
-		<img class="img-circle img-world" src="images/worlds/semirp.min.jpg" alt="SEMI-RP"/>
-		<div class="lead text-center">Là où le plaisir n'est pas qu'en partie.</div>
-		<p class="indent text-justify">C'est un monde imprégné de l'énergie des joueurs. En effet, divisé en provinces, ce monde est dynamisé par 5 gouverneurs et son community manager. Un système de gestion est à votre disposition pour vous permettre de créer votre propre ville et vie en jeu.</p>
-	</div>
-
-	<div class="col-md-4">
-		<h2 class="text-center h3">Créatif</h2>
-		<img class="img-circle img-world" src="images/worlds/creative.min.jpg" alt="creatif"/>
-		<div class="lead text-center">La création n'a de limite que dans l'esprit de son inventeur.</div>
-		<p class="indent text-justify">Ici, plus aucune limite, vous pourrez créer tout ce qui vous passe par la tête et, sous le regard bienveillant des archi-modérateurs ainsi que de la communauté, vous aurez la possibilité de laisser libre court à vos plus grands fantasmes de constructeur.</p>
-	</div>
-
-	<div class="col-md-4">
-		<h2 class="text-center h3">Origines</h2>
-		<img class="img-circle img-world" src="images/worlds/origins.min.jpg" alt="origines"/>
-		<div class="lead text-center">Là où Minecraft reprend toutes ses couleurs d'antan.</div>
-		<p class="indent text-justify">Mêlant liberté du créatif et monde survival Vanilla, vous voilà libre de construire en survival tout ce que vous voulez sur ce Minecraft qui a su vous faire tant craquer.</p>
-	</div>
-</div>
-
-<div class="row text-center">
-	<a class="btn btn-default" href="http://wiki.heavencraft.fr" role="button">Plus d'informations sur le Wiki</a>
-</div>
-
-<hr />
 
 <a id="Qui-sommes-nous" class="anchor"></a>
-<h3 class="text-center h2">Qui sommes-nous ?</h3>
+<h2 class="text-center">Qui sommes-nous ?</h2>
 
 <div class="row">
 	<div class="col-md-6">
-		<h2 class="text-center h3">Le serveur</h2>
-		<p class="indent text-justify">Créé le 28 mars 2011, Heavencraft est avant tout un serveur Minecraft créé avec passion par 3 développeurs dont l'unique but était d'offrir une plateforme communautaire pour ce jeu alors que les serveurs étaient assez rares à l'époque.</p>
-		<p class="indent text-justify">Depuis, géré par des passionnés, tant en développement qu'en jeu, Heavencraft reste une famille où chacun a sa place et où la bonne humeur est un facteur essentiel. Un staff à l'écoute est présent en permanence et une équipe de développement travaille chaque jour pour offrir continuellement du contenu novateur.</p>
+		<p class="indent text-justify">Heavencraft était un serveur communautaire et associatif créé le 28 mars 2011, et fermé le 30 septembre 2017, géré par des bénévoles passionnés.</p>
 	</div>
 	<div class="col-md-6">
-		<h2 class="text-center h3">L'association</h2>
-			<p class="indent text-justify">Le serveur ayant un coût, il est impératif pour nous de travailler main dans la main avec les joueurs pour nous permettre de financer le serveur.</p>
-			<p class="indent text-justify">Dans un soucis que le joueur sache que son argent est utilisé avec le plus grand soin, une association Heavencraft a été créée et déposée en préfecture le 4 novembre 2012.</p>
+		<p class="indent text-justify">Depuis la fermeture du serveur communautaire, Heavencraft est maintenu en tant que serveur personnel par ses anciens développeurs. Un serveur minecraft et un serveur mumble restent ouverts au public pour ceux souhaitant venir jouer avec nous.</p>
 	</div>
 </div>
 
 <div class="row">
-
-	<div class="col-md-6">
-		<h4>Le "head staff"</h4>
-		<p class="indent text-justify">Il s'agit des personnes membres de l'association :</p>
-		<ul>
-			<li style="list-style-image: url(images/team/admins/Snoupy47.png)">Snoupy47, présidente de l'association</li>
-			<li style="list-style-image: url(images/team/admins/lorgan17.png)">lorgan17, trésorier de l'association</li>
-			<li style="list-style-image: url(images/team/admins/Manu67100.png)">Manu67100, secrétaire de l'association</li>
-		</ul>
-		<img class="img-responsive img-team" src="images/team/admins/admins.min.jpg" alt="Equipe administrative">
-
-		<h4>L'équipe de communication</h4>
-		<p class="indent text-justify">L'équipe de communication s'occupe de la communication intérieure et extérieure du serveur, de la gestion de sa communauté ainsi que de la rédaction en général.</p>
-		<ul>
-			<li style="list-style-image: url(images/team/comm/Reaven59.png)"><b>Reaven59</b></li>
-			<li style="list-style-image: url(images/team/comm/War2unicorn.png)">War2unicorn</li>
-			<li style="list-style-image: url(images/team/comm/Wivgot.png)">Wivgot</li>
-		</ul>
-		<img class="img-responsive img-team" src="images/team/comm/comm.min.jpg" alt="Equipe de communication">
+	<div class="col-md-4">
+		<h3 class="text-center">lorgan17</h3>
+		<img class="img-circle img-world" src="images/team/lorgan17.jpg" alt="lorgan17" />
 	</div>
-
-	<div class="col-md-6">
-		<h4>La modération</h4>
-		<p class="indent text-justify">Les modérateurs sont là pour gérer les problèmes usuels du serveur (conflits entre les joueurs, tricherie, etc.). Ils s'assurent que tout le monde puisse avoir la meilleur expérience possible aussi bien en jeu que sur le forum.</p>
-		<ul>
-			<li style="list-style-image: url(images/team/mods/darckmart.png)"><b>darckmart</b></li>
-			<li style="list-style-image: url(images/team/mods/iiDyze.png)">iiDyze</li>
-			<li style="list-style-image: url(images/team/mods/Snykeurs.png)">Snykeurs</li>
-			<li style="list-style-image: url(images/team/mods/Xael775.png)">Xael775</li>
-		</ul>
-		<img class="img-responsive img-team" src="images/team/mods/mods.min.jpg" alt="Equipe de modération">
-
-		<h4>Les architectes et responsables</h4>
-		<p class="indent text-justify">Les architectes de l'équipe construisent dans l'intérêt de la communauté, en développant l'univers et le gameplay du serveur grâce à leurs constructions.</p>
-		<ul>
-			<li style="list-style-image: url(images/team/archi/arthurion98.png)">arthurion98, architecte intermondes</li>
-			<li style="list-style-image: url(images/team/archi/Stillow.png)">Stillow, gérant Fun</li>
-			<li style="list-style-image: url(images/team/archi/X_zbouby_X.png)">X_zbouby_X, gérant du Semi-RP</li>
-			<li style="list-style-image: url(images/team/archi/Balthov60.png)">Balthov60, résponsable RPG</li>
-		</ul>
+	<div class="col-md-4">
+		<h3 class="text-center">Manu67100</h3>
+		<img class="img-circle img-world" src="images/team/Manu67100.jpg" alt="Manu67100" />
+	</div>
+	<div class="col-md-4">
+		<h3 class="text-center">Mythridor</h3>
+		<img class="img-circle img-world" src="images/team/Mythridor.jpg" alt="Mythridor" />
 	</div>
 </div>
 
 <hr />
 
-<a id="Nous-aider" class="anchor"></a>
-<h3 class="text-center h2">Nous aider</h3>
+<a id="Telechargements" class="anchor"></a>
+<h2 class="text-center">Téléchargements</h2>
 
 <div class="row">
-	<div class="col-md-4">
-		<h2 class="h3">Faire un don</h2>
-		<p class="indent text-justify">Vous pouvez faire un don à l'association Heavencraft via notre compte PayPal en cliquant sur le bouton ci-dessous :</p>
-		<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" class="paypal text-center">
-			<input type="hidden" name="cmd" value="_s-xclick">
-			<input type="hidden" name="hosted_button_id" value="37264QFS62YGC">
-			<input type="image" src="images/btn_donateCC_LG.png" border="0" name="submit" alt="PayPal - la solution de paiement en ligne la plus simple et la plus sécurisée !">
-			<img alt="" border="0" src="https://www.paypalobjects.com/fr_FR/i/scr/pixel.gif" width="1" height="1">
-		</form>
-	</div>
-	<div class="col-md-4">
-		<h2 class="h3">Acheter des HPs</h2>
-		<p class="indent text-justify">Vous pouvez également contribuer à Heavencraft en achetant des HPs, la monnaie du serveur :</p>
+	<div class="col-md-6">
+		<h3 class="text-center">Les cartes</h3>
+		<p class="indent text-justify">Vous pouvez désormais télécharger librement les anciennes cartes du serveur via BitTorrent. Si vous n'avez pas de client BitTorrent, nous vous conseillons l'excellent <a href="https://transmissionbt.com/">Transmission</a>.</p>
 		<div class="text-center">
-			<a class="btn btn-default" href="hp_achat.php" rel="nofollow" role="button">Acheter des HPs via StarPass</a>
+			<a class="btn btn-default" href="heavencraft_maps.torrent" role="button">Télécharger les cartes</a>
 		</div>
 	</div>
-	<div class="col-md-4">
-		<h2 class="h3">Partenaires</h2>
-		<p class="indent text-justify">Afin de mieux se faire connaitre, Heavencraft a fondé un réseau de partenaires, n'hésitez pas à y jeter un œil:</p>
-		<div class="text-center">
-			<a class="btn btn-default" href="http://the-minecraft.fr/" role="button">The-Minecraft</a>
-			<a class="btn btn-default" href="https://bigcube.ch/" role="button">Bigcube</a>
-		</div>
-	</div>
-</div>
-
-<div class="row">
-	<div class="col-md-offset-3 col-md-6">
-		<h2 class="h3">Voter pour nous</h2>
-		<p class="indent text-justify">Les sites de classement sont cruciaux pour la promotion du serveur, indispensable à la survie de notre communauté. Pour nous assurer une bonne visibilité, vous pouvez voter pour nous sur différents sites :</p>
-		<div class="text-center">
-			<a class="btn btn-default" href="http://mc-topserv.net/top/serveur.php?serv=46" role="button">Mc-TopServ</a>
-			<a class="btn btn-default" href="http://top-serveurs-minecraft.fr/fiche_serveur.php?id=1345" role="button">Top Serveurs Minecraft</a>
-			<a class="btn btn-default" href="http://www.mcserv.org/Heavencraftfr_3002.html" role="button">McServ.org</a>
-			<a class="btn btn-default" href="http://www.rpg-paradize.com/site-Heavencraft-104357" role="button">RPG Paradize</a>
-			<a class="btn btn-default" href="http://www.serveursminecraft.org/serveur.php?id=104" role="button">ServeursMinecraft.org</a>
-			<a class="btn btn-default" href="https://www.serveurs-minecraft.com/serveur-minecraft?Classement=Heavencraft" role="button">Serveurs-Minecraft.com</a>
-		</div>
+	<div class="col-md-6">
+		<h3 class="text-center">Le code</h3>
+		<p class="indent text-justify">Le code source des plugins, scripts et outils créés par Heavencraft sont tous publiés sous licence libre, vous pouvez les retrouver sur notre compte Github.</p>
 	</div>
 </div>
 
